2015-08-04  Gavin Smith  <gavinsmith0123@gmail.com>

	* configure.ac,
	* tp/Texinfo/Convert/XSParagraph/configure.ac: Add 
	--enable-perl-xs option.  Record result via Autoconf output 
	variable and Automake conditional.
	* tp/Makefile.am: Substitute result into texi2any.pl.
	* tp/Makefile.am: If --disable-perl-xs was given, don't build in 
	XSParagraph subdirectory

	* tp/texi2any.pl: Substitute choice for --enable-perl-xs option, 
	and propagate to Texinfo::Convert::XSParagraph::XSParagraph module.
	* tp/Texinfo/Convert/XSParagraph/XSParagraph.pm: If 
	--disable-perl-xs was given to configure, disable use of Perl XS 
	modules.
	* README-hacking: Mention a case when you might want to run 
	tp/texi2any.

	* NEWS: Update with some work in progress.

2015-08-04  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (BEFORE_MENUS): New symbol.  Use it instead of 
	literal value.  Remove some commented-out code.

2015-08-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Short Sample Texinfo File): Remove some 
	unnecessary words.
	(Sample Texinfo Files): Reword slightly.
	(Short Sample): Remove some unnecessary words and sentences, and 
	rearrange some paragraphs.

2015-08-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi: Remove commented-out appendices.

2015-08-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\initialfonts): New macro.
	(\initial): Split into \initial and \initialx.  Use 
	\initialfonts in \initial, and use \egroup at the end of 
	\initialx.  Rely on the use of \secfonts in \initialfonts 
	instead of \let\tentt=\sectt etc.
	(\normalhyphen, \usemathbackslash): New control sequences.
	(\secrmnotbold): New font.

2015-08-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.h (NODE): New field 'active_menu'.
	(N_SeenBySearch): New flag.

	* info/session.c (tree_search_check_node)
	(tree_search_check_node_backwards): New functions.