@@ -1,6 +1,13 @@
 2015-08-04  Gavin Smith  <gavinsmith0123@gmail.com>
 
 	* configure.ac,
+	* tp/Texinfo/Convert/XSParagraph/configure.ac: Recognize
+	PERL_EXT_CFLAGS, PERL_EXT_CPPFLAGS, PERL_EXT_LDLAGS as user 
+	variables.
+
+2015-08-04  Gavin Smith  <gavinsmith0123@gmail.com>
+
+	* configure.ac,
 	* tp/Texinfo/Convert/XSParagraph/configure.ac: Add 
 	--enable-perl-xs option.  Record result via Autoconf output 
 	variable and Automake conditional.
